Updated some analyses notebooks. Small change to how surface brightness temperatures are approximated and returned in radiative transfer mode.

--- a/Analyses/Millan_study.ipynb
+++ b/Analyses/Millan_study.ipynb
@@ -22,10 +22,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": "import sys\nimport os\nfrom pathlib import Path\n\n# Add parent directory to path for imports\nsys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '..')))\n\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport matplotlib.dates as mdates\nfrom datetime import datetime, timedelta\n\n# Import thermal model components\nfrom core.config_manager import ConfigManager, create_default_base_config\nfrom core.thermal_simulation import ThermalSimulator\nfrom modelmain import Simulator\nfrom config import SimulationConfig\nfrom modelmain import fit_blackbody_wn_banded, max_btemp_blackbody\n\n# Import the new radiance processing framework\nfrom radiance_processor import calculate_radiances_from_results, recompute_radiance_with_angles\n\n# Set up plotting style\nplt.style.use('default')\nplt.rcParams['figure.figsize'] = (12, 8)\nplt.rcParams['font.size'] = 11\nplt.rcParams['lines.linewidth'] = 2\n\nprint(\"Imports completed successfully!\")\nprint(\"✓ New radiance processing framework imported\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imports completed successfully!\n",
+      "✓ New radiance processing framework imported\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Add parent directory to path for imports\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Import thermal model components\n",
+    "from core.config_manager import ConfigManager, create_default_base_config\n",
+    "from core.thermal_simulation import ThermalSimulator\n",
+    "from modelmain import Simulator\n",
+    "from config import SimulationConfig\n",
+    "from modelmain import fit_blackbody_wn_banded, max_btemp_blackbody\n",
+    "\n",
+    "# Import the new radiance processing framework\n",
+    "from radiance_processor import calculate_radiances_from_results, recompute_radiance_with_angles\n",
+    "\n",
+    "# Set up plotting style\n",
+    "plt.style.use('default')\n",
+    "plt.rcParams['figure.figsize'] = (12, 8)\n",
+    "plt.rcParams['font.size'] = 11\n",
+    "plt.rcParams['lines.linewidth'] = 2\n",
+    "\n",
+    "print(\"Imports completed successfully!\")\n",
+    "print(\"✓ New radiance processing framework imported\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,15 +132,11 @@
       "Configuration: Et=80000.0, k_dust=0.00042, thickness=0.003m\n",
       "Time step: 0.000844 s, Steps per day: 18305058\n",
       "Thermal evolution mode: two_wave\n",
-      "Output radiance mode: hybrid\n",
       "Non-diurnal step 0, time=0.00s\n",
-      "Computing DISORT radiance spectra for output.\n",
-      "Computing DISORT emissivity spectra for output.\n",
-      "Radiance calculation completed.\n",
-      "Simulation completed in 0.15 s\n",
+      "Simulation completed in 0.00 s\n",
       "Simulation completed! Output shape: (114, 1)\n",
       "Time range: 0 to 0 seconds\n",
-      "Surface temperature range: 500.0 to 500.0 K\n"
+      "Surface temperature range: 475.9 to 475.9 K\n"
      ]
     }
    ],
@@ -156,10 +192,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": "# Plot isothermal spectrum using the new radiance processing framework\nprint(\"Computing radiance using new framework...\")\nradiance_results1 = calculate_radiances_from_results(sim1)\n\n# Extract results\nwn = radiance_results1['wavenumbers']\nfinal_rad = radiance_results1['radiance_thermal'][:, -1]  # [wavelengths] for single observer\nir_cutoff = np.argmin(np.abs(wn - 1500))  # cm^-1, cutoff for IR bands\n\n# Read bin edges from config\nwn_bounds = np.sort(np.loadtxt(sim1.cfg.wn_bounds_out))\nT_fit, B_fit, btemps, wn_BB = max_btemp_blackbody(sim1, wn_bounds, final_rad)\nemiss_spec = final_rad / B_fit\n\n# Normalize emissivity\nidx1 = np.argmin(np.abs(wn - 900))\nidx2 = np.argmin(np.abs(wn - 1700))\nds_cf_emis = emiss_spec[idx1:idx2+1].max()\n\nplt.figure()\nplt.plot(wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\nplt.xlabel('Wavenumber [cm$^{-1}$]')\nplt.ylabel('Emissivity')\nplt.title('Isothermal Emissivity Spectrum - Millan et al. 2011 Reproduction\\\\n(Radiance / Best-fit Blackbody)')\nplt.legend()\nplt.grid(True)\nplt.gca().invert_xaxis()\nplt.show()\n\nprint(f\"✓ Isothermal radiance computed using new framework\")\nprint(f\"  Shape: {radiance_results1['radiance_thermal'].shape}\")\nprint(f\"  Spectral mode: {radiance_results1['spectral_mode']}\")\nprint(f\"  Observer angles: {radiance_results1['observer_angles_deg']}°\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing radiance using new framework...\n",
+      "Auto-detected simulation object, extracting data...\n",
+      "Computing surface radiances for 1 observers and 1 time points...\n",
+      "  Observer 1/1 (mu=1.000, angle=0.0°)\n",
+      "Surface radiance calculation completed.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "zero-size array to reduction operation maximum which has no identity",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Read bin edges from config\u001b[39;00m\n\u001b[32m     11\u001b[39m wn_bounds = np.sort(np.loadtxt(sim1.cfg.wn_bounds_out))\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m T_fit, B_fit, btemps, wn_BB = \u001b[43mmax_btemp_blackbody\u001b[49m\u001b[43m(\u001b[49m\u001b[43msim1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwn_bounds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal_rad\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m emiss_spec = final_rad / B_fit\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Normalize emissivity\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/RT_models/RT_thermal_model/modelmain.py:1443\u001b[39m, in \u001b[36mmax_btemp_blackbody\u001b[39m\u001b[34m(sim, wn_edges_input, radiance_input, idx, wn_min, wn_max)\u001b[39m\n\u001b[32m   1440\u001b[39m \tbrightness_temps[i] = radiance_to_brightness_temp(wn_edges[i], wn_edges[i+\u001b[32m1\u001b[39m], radiance[i])\n\u001b[32m   1442\u001b[39m \u001b[38;5;66;03m# Find maximum brightness temperature\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1443\u001b[39m T_max = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbrightness_temps\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbrightness_temps\u001b[49m\u001b[43m \u001b[49m\u001b[43m>\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1445\u001b[39m \u001b[38;5;66;03m# Generate Planck blackbody spectrum at maximum temperature\u001b[39;00m\n\u001b[32m   1446\u001b[39m B_max = planck_wn_integrated(wn_edges_input, T_max)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/RT_models/pydisort_env/env/lib/python3.13/site-packages/numpy/core/fromnumeric.py:2810\u001b[39m, in \u001b[36mmax\u001b[39m\u001b[34m(a, axis, out, keepdims, initial, where)\u001b[39m\n\u001b[32m   2692\u001b[39m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_max_dispatcher)\n\u001b[32m   2693\u001b[39m \u001b[38;5;129m@set_module\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mnumpy\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m   2694\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmax\u001b[39m(a, axis=\u001b[38;5;28;01mNone\u001b[39;00m, out=\u001b[38;5;28;01mNone\u001b[39;00m, keepdims=np._NoValue, initial=np._NoValue,\n\u001b[32m   2695\u001b[39m          where=np._NoValue):\n\u001b[32m   2696\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   2697\u001b[39m \u001b[33;03m    Return the maximum of an array or maximum along an axis.\u001b[39;00m\n\u001b[32m   2698\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   2808\u001b[39m \u001b[33;03m    5\u001b[39;00m\n\u001b[32m   2809\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2810\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapreduction\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmaximum\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmax\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2811\u001b[39m \u001b[43m                          \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitial\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/RT_models/pydisort_env/env/lib/python3.13/site-packages/numpy/core/fromnumeric.py:88\u001b[39m, in \u001b[36m_wrapreduction\u001b[39m\u001b[34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[39m\n\u001b[32m     85\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     86\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m reduction(axis=axis, out=out, **passkwargs)\n\u001b[32m---> \u001b[39m\u001b[32m88\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mufunc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mpasskwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: zero-size array to reduction operation maximum which has no identity"
+     ]
+    }
+   ],
+   "source": [
+    "# Plot isothermal spectrum using the new radiance processing framework\n",
+    "print(\"Computing radiance using new framework...\")\n",
+    "radiance_results1 = calculate_radiances_from_results(sim1)\n",
+    "\n",
+    "# Extract results\n",
+    "wn = radiance_results1['wavenumbers']\n",
+    "final_rad = radiance_results1['radiance_thermal'][:, -1]  # [wavelengths] for single observer\n",
+    "ir_cutoff = np.argmin(np.abs(wn - 1500))  # cm^-1, cutoff for IR bands\n",
+    "\n",
+    "# Read bin edges from config\n",
+    "wn_bounds = np.sort(np.loadtxt(sim1.cfg.wn_bounds_out))\n",
+    "T_fit, B_fit, btemps, wn_BB = max_btemp_blackbody(sim1, wn_bounds, final_rad)\n",
+    "emiss_spec = final_rad / B_fit\n",
+    "\n",
+    "# Normalize emissivity\n",
+    "idx1 = np.argmin(np.abs(wn - 900))\n",
+    "idx2 = np.argmin(np.abs(wn - 1700))\n",
+    "ds_cf_emis = emiss_spec[idx1:idx2+1].max()\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n",
+    "         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\n",
+    "plt.xlabel('Wavenumber [cm$^{-1}$]')\n",
+    "plt.ylabel('Emissivity')\n",
+    "plt.title('Isothermal Emissivity Spectrum - Millan et al. 2011 Reproduction\\\\n(Radiance / Best-fit Blackbody)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.gca().invert_xaxis()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"✓ Isothermal radiance computed using new framework\")\n",
+    "print(f\"  Shape: {radiance_results1['radiance_thermal'].shape}\")\n",
+    "print(f\"  Spectral mode: {radiance_results1['spectral_mode']}\")\n",
+    "print(f\"  Observer angles: {radiance_results1['observer_angles_deg']}°\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1014,7 +1111,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Plot vacuum spectrum comparison using new framework\nprint(\"Computing vacuum radiance using new framework...\")\nradiance_results2 = calculate_radiances_from_results(sim2)\n\n# Extract vacuum results\nfinal_rad2 = radiance_results2['radiance_thermal'][:, -1]  # [wavelengths] for single observer\nT_fit2, B_fit2, btemps2, wn_BB2 = max_btemp_blackbody(sim2, wn_bounds, final_rad2)\nemiss_spec2 = final_rad2 / B_fit2\n\n# Normalize vacuum emissivity\nidx1 = np.argmin(np.abs(wn - 900))\nidx2 = np.argmin(np.abs(wn - 1700))\nds_cf_emis2 = emiss_spec2[idx1:idx2+1].max()\n\n# Create comparison plots\nplt.figure(figsize=(14, 6))\n\n# Plot 1: Wavenumber space\nplt.subplot(1, 2, 1)\nplt.plot(wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\nplt.plot(wn[:ir_cutoff], emiss_spec2[:ir_cutoff] + 1 - ds_cf_emis2, \n         label=f'Vacuum (T_fit={T_fit2:.1f}K)', linewidth=2)\nplt.xlabel('Wavenumber [cm$^{-1}$]')\nplt.ylabel('Normalized Emissivity')\nplt.title('Emissivity Comparison\\\\n(Wavenumber Space)')\nplt.legend()\nplt.grid(True)\nplt.gca().invert_xaxis()\n\n# Plot 2: Wavelength space\nplt.subplot(1, 2, 2)\nplt.plot(10000./wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\nplt.plot(10000./wn[:ir_cutoff], emiss_spec2[:ir_cutoff] + 1 - ds_cf_emis2, \n         label=f'Vacuum (T_fit={T_fit2:.1f}K)', linewidth=2)\nplt.xlabel('Wavelength [µm]')\nplt.ylabel('Normalized Emissivity')\nplt.title('Emissivity Comparison\\\\n(Wavelength Space)')\nplt.xlim([6, 14])\nplt.legend()\nplt.grid(True)\n\nplt.suptitle('Millan et al. 2011 Reproduction: Isothermal vs Vacuum Thermal Gradient Effects', \n             fontsize=14, fontweight='bold')\nplt.tight_layout()\nplt.show()\n\n# Quantitative comparison\nprint(f\"\\\\n=== QUANTITATIVE COMPARISON ===\")\nprint(f\"Isothermal case:\")\nprint(f\"  • Brightness temperature: {T_fit:.1f} K\")\nprint(f\"  • Peak emissivity: {emiss_spec.max():.3f}\")\nprint(f\"  • Radiance processing: {radiance_results1['spectral_mode']} mode\")\n\nprint(f\"\\\\nVacuum case:\")\nprint(f\"  • Brightness temperature: {T_fit2:.1f} K\") \nprint(f\"  • Peak emissivity: {emiss_spec2.max():.3f}\")\nprint(f\"  • Radiance processing: {radiance_results2['spectral_mode']} mode\")\n\n# Calculate difference\ntemp_diff = T_fit2 - T_fit\nemiss_diff = np.abs(emiss_spec2 - emiss_spec).max()\nprint(f\"\\\\nDifferences:\")\nprint(f\"  • Temperature difference: {temp_diff:.1f} K\")\nprint(f\"  • Max emissivity difference: {emiss_diff:.4f}\")\n\nprint(f\"\\\\n✓ Vacuum radiance computed using new framework\")\nprint(f\"✓ Both simulations processed consistently\")\nprint(f\"✓ Easy comparison enabled by unified interface\")"
+   "source": [
+    "# Plot vacuum spectrum comparison using new framework\n",
+    "print(\"Computing vacuum radiance using new framework...\")\n",
+    "radiance_results2 = calculate_radiances_from_results(sim2)\n",
+    "\n",
+    "# Extract vacuum results\n",
+    "final_rad2 = radiance_results2['radiance_thermal'][:, -1]  # [wavelengths] for single observer\n",
+    "T_fit2, B_fit2, btemps2, wn_BB2 = max_btemp_blackbody(sim2, wn_bounds, final_rad2)\n",
+    "emiss_spec2 = final_rad2 / B_fit2\n",
+    "\n",
+    "# Normalize vacuum emissivity\n",
+    "idx1 = np.argmin(np.abs(wn - 900))\n",
+    "idx2 = np.argmin(np.abs(wn - 1700))\n",
+    "ds_cf_emis2 = emiss_spec2[idx1:idx2+1].max()\n",
+    "\n",
+    "# Create comparison plots\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# Plot 1: Wavenumber space\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n",
+    "         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\n",
+    "plt.plot(wn[:ir_cutoff], emiss_spec2[:ir_cutoff] + 1 - ds_cf_emis2, \n",
+    "         label=f'Vacuum (T_fit={T_fit2:.1f}K)', linewidth=2)\n",
+    "plt.xlabel('Wavenumber [cm$^{-1}$]')\n",
+    "plt.ylabel('Normalized Emissivity')\n",
+    "plt.title('Emissivity Comparison\\\\n(Wavenumber Space)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.gca().invert_xaxis()\n",
+    "\n",
+    "# Plot 2: Wavelength space\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(10000./wn[:ir_cutoff], emiss_spec[:ir_cutoff] + 1 - ds_cf_emis, \n",
+    "         label=f'Isothermal (T_fit={T_fit:.1f}K)', linewidth=2)\n",
+    "plt.plot(10000./wn[:ir_cutoff], emiss_spec2[:ir_cutoff] + 1 - ds_cf_emis2, \n",
+    "         label=f'Vacuum (T_fit={T_fit2:.1f}K)', linewidth=2)\n",
+    "plt.xlabel('Wavelength [µm]')\n",
+    "plt.ylabel('Normalized Emissivity')\n",
+    "plt.title('Emissivity Comparison\\\\n(Wavelength Space)')\n",
+    "plt.xlim([6, 14])\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.suptitle('Millan et al. 2011 Reproduction: Isothermal vs Vacuum Thermal Gradient Effects', \n",
+    "             fontsize=14, fontweight='bold')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Quantitative comparison\n",
+    "print(f\"\\\\n=== QUANTITATIVE COMPARISON ===\")\n",
+    "print(f\"Isothermal case:\")\n",
+    "print(f\"  • Brightness temperature: {T_fit:.1f} K\")\n",
+    "print(f\"  • Peak emissivity: {emiss_spec.max():.3f}\")\n",
+    "print(f\"  • Radiance processing: {radiance_results1['spectral_mode']} mode\")\n",
+    "\n",
+    "print(f\"\\\\nVacuum case:\")\n",
+    "print(f\"  • Brightness temperature: {T_fit2:.1f} K\") \n",
+    "print(f\"  • Peak emissivity: {emiss_spec2.max():.3f}\")\n",
+    "print(f\"  • Radiance processing: {radiance_results2['spectral_mode']} mode\")\n",
+    "\n",
+    "# Calculate difference\n",
+    "temp_diff = T_fit2 - T_fit\n",
+    "emiss_diff = np.abs(emiss_spec2 - emiss_spec).max()\n",
+    "print(f\"\\\\nDifferences:\")\n",
+    "print(f\"  • Temperature difference: {temp_diff:.1f} K\")\n",
+    "print(f\"  • Max emissivity difference: {emiss_diff:.4f}\")\n",
+    "\n",
+    "print(f\"\\\\n✓ Vacuum radiance computed using new framework\")\n",
+    "print(f\"✓ Both simulations processed consistently\")\n",
+    "print(f\"✓ Easy comparison enabled by unified interface\")"
+   ]
   }
  ],
  "metadata": {
